--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "console-colorizer",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Adds colored console logging (for node and browser)",
-  "main": "dist/index.js",
+  "main": "dist/index",
+  "typings": "dist/index",
   "scripts": {
-    "build": "babel src --presets babel-preset-es2015 --out-dir dist",
+    "build": "tsc src/index.ts --outDir dist -d --lib dom,es5,es2015,scripthost",
     "prepublish": "npm run build"
   },
   "author": "German Mendez Bravo (Kronuz)",
@@ -13,7 +14,6 @@
     "color-name": "^1.1.3"
   },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1"
+    "typescript": "^2.9.1"
   }
 }
